Session-9/Kubernetes-Resources/Deployment-Blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-v1-green
spec:
  replicas: 5
  selector:
    matchLabels:
      app: webserver-v1-blue
  template:
    metadata:
      labels:
        app: webserver-v1-blue
    spec:
      containers:
      - name: webserver
        image: quay.io/emre_celik/webserver-demo:v3
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
