Session-9/Kubernetes-Resources/Service-Blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-v1-blue
spec:
  selector:
    app: webserver-v1-blue
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
