Session-9/Kubernetes-Resources/Service-Green.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-v1-green
spec:
  selector:
    app: webserver-v1-green
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
