Session-9/Kubernetes-Resources/Service-Recreate.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-v1
spec:
  selector:
    app: webserver-v1
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
