Session-9/Kubernetes-Resources/redis-ingres-egress-np.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redis-np
  namespace: sample-app
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - ports:
        - protocol: TCP
          port: 6379
      from:
        - podSelector:
            matchLabels:
              app: guestbook
              tier: frontend
  egress:
    - ports:
        - protocol: TCP
          port: 6379
      to:
        - podSelector:
            matchLabels:
              app: redis
    - ports:
        - protocol: TCP
          port: 6379
      to:
        - podSelector:
            matchLabels:
              app: redis
  policyTypes:
    - Ingress
    - Egress
